--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.11", features = ["json"] }
 tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
 futures-util = "0.3"
+bincode = "1.3"
+base64 = "0.21"
+async-trait = "0.1"
