--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,10 @@ tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.13.1", features = ["json"] }
 tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
 futures-util = "0.3"
-bincode = "3.0.0"
+bincode = "1.3.3"
 base64 = "0.22.1"
+bytes = "1.7"
 async-trait = "0.1"
+rmp-serde = "1.3"
+urlencoding = "2.1"
 jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
