--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "solana-dex-superagg"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
+description = "A Rust library for accessing Titan and Jupiter DEX aggregators on Solana with smart routing strategies"
+license = "MIT"
+repository = "https://github.com/abdulrabbani/solana-dex-superagg"
+readme = "README.md"
+keywords = ["solana", "dex", "swap", "jupiter", "titan", "aggregator", "defi"]
+categories = ["cryptography::cryptocurrencies", "web-programming"]
+authors = ["Abdul Rabbani"]
 
 [lib]
 name = "solana_dex_superagg"
